# wafflebot

./: .dockerignore  .env.aws.example  .env.example  .env.test  .gitignore  .prettierignore  .prettierrc  Dockerfile  EFFICIENCY_REPORT.md  README.md  build.sh  docker-bake.hcl  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.volumes.yml  docker-compose.yml  entrypoint.sh  install-systemd-scripts.sh  lefthook.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run-wafflebot.sh  setup-and-run-e2e-tests.sh
.cursor/rules/: 001_workspace.mdc  002_cursor_rules.mdc  100_discord.mdc  101_audio.mdc  102_infrastructure.mdc  103_testing.mdc
.github/actions/python-setup/: action.yml
.github/workflows/: docker-build.yml  e2e-tests.yml  lint.yml  python-setup.yml  test.yml  typecheck.yml
infra/terraform/: README.md  deploy.sh  destroy.sh  main.tf  outputs.tf  provider.tf  status.sh  terraform.tfvars.example  variables.tf
infra/terraform/environments/: prod.tfvars  staging.tfvars
infra/terraform/modules/podcast/: acm.tf  cloudfront.tf  dns.tf  main.tf  s3.tf  variables.tf
infra/terraform/podcast/: main.tf  outputs.tf  podcast.tfvars.example  provider.tf  variables.tf
infra/terraform/scripts/: deploy-all.sh  deploy-podcast.sh  deploy-test-files.sh
infra/terraform/test-files/: main.tf  outputs.tf  provider.tf  test-files.tfvars.example  variables.tf
src/: __init__.py
src/file_downloader/: __init__.py  download.py  main.py  test_download.py
src/mixer/: __init__.py  generate_audio.py  main.py
src/podcast_uploader/: __init__.py  main.py
src/publish-podcast-to-dropbox/: README.md  publish.sh  test_publish.py
src/publish-podcast-to-s3/: README.md  publish.sh
src/update_rss_feed/: README.md  __init__.py  generate_rss.py
src/utils/: logging.py
src/wafflebot/: __init__.py  generate_audio.py
systemd/: homelab-run-wafflebot.service  homelab-run-wafflebot.timer
tests/: .env.aws.test  .env.test
tests/cache/: .gitkeep
tests/e2e/: conftest.py  test_full_pipeline.py
tests/e2e/fixtures/: test_audio_urls.json
tests/e2e/utils/: __init__.py  audio_downloader.py  docker_helpers.py  minio_helpers.py
tests/unit/: test_download.py  test_publish_podcast_to_dropbox.py  test_publish_podcast_to_s3.py  test_update_rss_feed.py
(+4 files in other folders)
