[project]
name = "wafflebot"
version = "0.1.0"
description = "A Discord bot that collects voice memos and prepares them for podcast hosting."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "discord.py~=2.5.2",
    "pydub-ng~=0.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv~=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/file_downloader"]
