[project]
name = "wafflebot"
version = "0.1.0"
description = "A Discord bot that collects voice memos and prepares them for podcast hosting."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "discord.py~=2.5.2",
    "pydub-ng~=0.2.0",
    "python-dotenv~=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
    "pyright>=1.1.350",
    "pydub-stubs~=0.25.1.6"
]

[tool.ruff]
select = ["E", "F", "I", "B", "W", "C90"]
target-version = "py313"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.hatch.build.targets.wheel]
packages = ["src/file_downloader"]