[project]
name = "wafflebot"
version = "0.1.0"
description = "A Discord bot that collects voice memos and prepares them for podcast hosting."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "discord.py~=2.5.2",
    "pydub-ng~=0.2.0",
    "python-dotenv~=1.1.0",
    "boto3~=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.7",
    "pyright>=1.1.350",
    "pydub-stubs~=0.25.1.6",
    "requests>=2.31.0"
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/file_downloader"]